# Quantum-Migration-Toolkit

./: .gitignore  README.md
Locker/: AES.cpp  AES.hpp  CMakeLists.txt  FileEncryptor.cpp  FileEncryptor.hpp  QuantumKyber.cpp  QuantumKyber.hpp  main.cpp
Scanner/: CMakeLists.txt  README.md  scanner_main.cpp
Scanner/test_code/: legacy_auth.cpp  modern_secure.cpp  vulnerable.py
